# scraper

./: .gitignore  LICENSE  README.md  prek.toml  pyproject.toml
scraper/: __main__.py  main.py
scraper/adb/: adb.py
scraper/download/: download.py  download_progress.py  image_collector.py  image_names.py  progress_manager.py  text_collector.py
scraper/ebook/: cbz.py  ebook.py  epub.py
scraper/files/: empty_chapters.py  files.py  util.py
scraper/img/: batch_images.py  image_tools.py  img.py  montage.py
scraper/util/: dynamic_ranges.py  logging_config.py
